[gd_scene load_steps=3 format=2]

[ext_resource path="res://client/states/common/GameBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://client/states/PlayerOrderState.gd" type="Script" id=2]

[node name="PlayerOrderState" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameBackground" parent="." instance=ExtResource( 1 )]

[node name="InfoLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -200.0
margin_right = 6.10352e-05
margin_bottom = -100.0
rect_scale = Vector2( 2, 2 )
text = "Player order will be determined first.

Player last in the order will select their character first.  The first player in the order will take the first turn.

The player order is:"
align = 1
autowrap = true

[node name="PlayerOrderLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = 20.0
margin_bottom = 50.0
rect_scale = Vector2( 2, 2 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = 140.0
margin_bottom = 175.0
rect_scale = Vector2( 2, 2 )
text = "Continue"

[node name="WaitingLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = 230.0
margin_right = 6.10352e-05
margin_bottom = 260.0
rect_scale = Vector2( 2, 2 )
text = "Waiting for other players..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
